# wiki_scraper

./: .gitignore  README.md  pyproject.toml
tests/: test_main.py
wiki_game/: main.py
